Fix center alignment for step 2

--- a/web/static/main.css
+++ b/web/static/main.css
@@ -127,3 +127,7 @@ img {
     box-shadow: none;
     display: none;
 }
+
+.text {
+    margin-left: 3vw;
+}
